portfolio-remastered/src/components/HeroImg4.css
.mask{
    width: 100%;
    height: 100vh;
    position: relative;
    }
    
    .intro-img{
    width: 100%; 
    height: 100%;
    background-size: cover;
    background-position: center;
    object-fit: cover;
    z-index: -1;
    }
    
    .mask::after{
        content: "";
        width: 100%;
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
        background-color: black;
        opacity: 0.8;
    }
    
    .hero .content{
        position: absolute;
        transform: translate(-50%, -50%);
        top: 50%;
        left: 50%;
        text-align: center;
    }
    
    .hero .content h1{
        font-size: 2.4rem;
        padding: 0.6rem 0 1.5rem;
    }
    
    .hero .content p{
        font-size: 2rem;
        text-align: center;
        font-weight: 200;
        text-transform: uppercase;
        margin-bottom: 3rem;
    }

    @media screen and (max-width: 640px){
        .hero .content h1{
            font-size: 2rem;
        }
    }

